# projeto_sistemas_multiagentes

./: README.md  Sprint1.md  dataset.yaml  report_parcial.MD  training.py
agentes_projeto/: README.md  pyproject.toml  report.md
agentes_projeto/runs/detect/train/: args.yaml  results.csv
agentes_projeto/runs/detect/train3/: args.yaml  results.csv
agentes_projeto/runs/detect/train4/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber/: args.yaml
agentes_projeto/runs/detect/train_pole_fiber10/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber11/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber12/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber13/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber14/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber15/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber16/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber17/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber18/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber19/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber2/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber20/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber21/: args.yaml  results.csv
agentes_projeto/runs/detect/train_pole_fiber22/: args.yaml  results.csv
agentes_projeto/src/agentes_projeto/: crew.py  main.py
dataset/labels/: train.cache  (+1 more)
(+62 files in other folders)
