[project]
name = "agentes_projeto"
version = "0.1.0"
description = "agentes_projeto using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
agentes_projeto = "agentes_projeto.main:run"
run_crew = "agentes_projeto.main:run"
train = "agentes_projeto.main:train"
replay = "agentes_projeto.main:replay"
test = "agentes_projeto.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
